--- a/web-app/css/style.css
+++ b/web-app/css/style.css
@@ -58,12 +58,15 @@ h1 {
 .menu #red:hover {
     background-color: #c13530;
 }
+#showStudentList {
+    text-align: center;
+}
 .aside {
     background-color: #33b5e5;
-    padding: 15px;
+    padding: 16px;
     color: #ffffff;
     text-align: center;
-    font-size: 14px;
+    font-size: 16px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 /* For mobile phones: */
