--- a/web-app/css/style.css
+++ b/web-app/css/style.css
@@ -60,8 +60,8 @@ h1 {
     background-color: #c13530;
 }
 #showStudentList {
-    table-layout:fixed;
-    border-style: dashed;
+    border: dashed;
+    height: 40%;
 }
 #showStudentList tr {
     height: 30px;
@@ -69,8 +69,9 @@ h1 {
 #showStudentList td,th {
     width:200px;
     word-wrap:break-word;
+    overflow-y:auto;
 }
-#aside {
+#stud_list {
     background-color: #33b5e5;
     padding: 16px;
     color: #ffffff;
@@ -78,6 +79,18 @@ h1 {
     font-size: 16px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
+#seatPlan {
+    width: 765px;
+    height: auto;
+    border: solid #33b5e5;
+    margin: 0;
+    /*position: relative;*/
+}
+#scroll_seatPlan {
+    float: left;
+    overflow-x: scroll;
+}
+
 /* For mobile phones: */
 [class*="col-"] {
     width: 100%;
@@ -96,6 +109,10 @@ h1 {
     .col-m-10 {width: 83.33%;}
     .col-m-11 {width: 91.66%;}
     .col-m-12 {width: 100%;}
+
+    #seatPlan {
+        width: 100%;
+    }
 }
 @media only screen and (min-width: 768px) {
     /* For desktop: */
