--- a/web-app/css/style.css
+++ b/web-app/css/style.css
@@ -72,13 +72,14 @@ h1 {
     overflow-y:auto;
 }
 #stud_list {
-    background-color: #33b5e5;
-    padding: 16px;
-    color: #ffffff;
-    text-align: center;
-    font-size: 16px;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-}
+     background-color: #33b5e5;
+     padding: 16px;
+     color: #ffffff;
+     text-align: center;
+     font-size: 16px;
+     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+     border-bottom: 10px;
+ }
 #seatPlan {
     width: 765px;
     height: auto;
