--- a/web-app/css/modal.css
+++ b/web-app/css/modal.css
@@ -98,6 +98,10 @@
     background-color: #f14a5a;
     color: white;
 }
+#ok-Btn {
+    background-color: #f16ef0;
+    color: white;
+}
 
 @media only screen and (min-width: 568px) {
     .modal-content {
