--- a/web-app/css/style.css
+++ b/web-app/css/style.css
@@ -36,8 +36,8 @@ h1 {
     font-size: large;
 }
 .menu #color1 {
-    background-color: #33b1e1;
-}
+     background-color: #33b1e1;
+ }
 .menu #color2 {
     background-color: #c35ed0;
 }
@@ -57,6 +57,31 @@ h1 {
     background-color: #ac56b8;
 }
 .menu #color4:hover {
+    background-color: #c13530;
+}
+
+.menu #blue {
+    background-color: #33b1e1;
+}
+.menu #purple {
+    background-color: #c35ed0;
+}
+.menu #green {
+    background-color: #11b82b;
+}
+.menu #red {
+    background-color: #e54337;
+}
+.menu #blue:hover {
+    background-color: #2f9fcb;
+}
+.menu #green:hover {
+    background-color: #11a82a;
+}
+.menu #purple:hover {
+    background-color: #ac56b8;
+}
+.menu #red:hover {
     background-color: #c13530;
 }
 #showStudentList {
