--- a/web-app/css/style.css
+++ b/web-app/css/style.css
@@ -112,6 +112,13 @@ h1 {
     margin: 0;
     /*position: relative;*/
 }
+#seatPlan_lab {
+    width: 100%;
+    height: 650px;
+    border: solid #33b5e5;
+    margin: 0;
+    /*position: relative;*/
+}
 #scroll_seatPlan {
     float: left;
     overflow-x: scroll;
@@ -136,7 +143,7 @@ h1 {
     .col-m-11 {width: 91.66%;}
     .col-m-12 {width: 100%;}
 
-    #seatPlan {
+    #seatPlan_lecture {
         width: 100%;
     }
 }
