--- a/web-app/css/modal.css
+++ b/web-app/css/modal.css
@@ -163,7 +163,7 @@ label.dropdown:after {
 }
 @media screen\0 {
     label.dropdown:after {
-        width: 38px;
+        /*width: 38px;*/
         text-indent: 15px;
         right: 0;
     }
@@ -175,6 +175,6 @@ label.dropdown:after {
         text-indent: 14px;
         right: 6px;
         top: -5px;
-        width: 36px;
+        /*width: 36px;*/
     }
 }
