--- a/web-app/css/studentListTable.css
+++ b/web-app/css/studentListTable.css
@@ -1,15 +1,15 @@
-table {
+.student-table {
     border-collapse: collapse;
     border: none;
 }
-th, td {
+th.student-table, td.student-table {
     border: 1px solid black;
     padding: 4px 16px;
     font-family: Times New Roman;
     font-size: 24px;
     text-align: left;
 }
-th {
+th.student-table {
     background-color: #C8C8C8;
     cursor: pointer;
 }
