--- a/web-app/css/style.css
+++ b/web-app/css/style.css
@@ -95,6 +95,15 @@ h1 {
 .menu #red:hover {
     background-color: #c13530;
 }
+#date {
+    width: 30%;
+    padding: 12px 10px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
 #showStudentList {
     border: dashed;
     height: 40%;
@@ -118,6 +127,7 @@ h1 {
  }
 #studentName {
     width: 50%;
+    height: 45px;
     padding: 12px 18px;
     margin: 8px 0;
     display: inline-block;
