--- a/web-app/css/navigation.css
+++ b/web-app/css/navigation.css
@@ -47,7 +47,9 @@ button {
 }
 
 @media screen and (max-width: 600px) {
-    .topnav a:not(:first-child) {display: none;}
+    .topnav a:not(:first-child):not(:nth-child(2)) {
+        display: none;
+    }
     .topnav a.icon {
         float: right;
         display: block;
