changed layout of classcode page

--- a/web-app/css/style.css
+++ b/web-app/css/style.css
@@ -96,11 +96,10 @@ h1 {
     background-color: #c13530;
 }
 #date {
-    width: 150px;
     padding: 12px 10px;
     margin: 8px 0;
     display: inline-block;
-    border: 1px solid #ccc;
+    border: 5px solid #1c819a;
     border-radius: 4px;
     box-sizing: border-box;
     font-size: larger;
@@ -176,7 +175,7 @@ h1 {
     }
 
     #date {
-        width: 200px;
+        width: 83%;
     }
 }
 @media only screen and (min-width: 768px) {
@@ -195,6 +194,6 @@ h1 {
     .col-12 {width: 100%;}
 
     #date {
-        width: 200px;
+        width: 83%;
     }
 }
