--- a/web-app/css/style.css
+++ b/web-app/css/style.css
@@ -126,7 +126,7 @@ h1 {
      border-bottom: 10px;
  }
 #studentName {
-    width: 50%;
+    width: 250px;
     height: 45px;
     padding: 12px 18px;
     margin: 8px 0;
@@ -177,6 +177,10 @@ h1 {
     #date {
         width: 83%;
     }
+
+    #studentName {
+        width: 250px;
+    }
 }
 @media only screen and (min-width: 768px) {
     /* For desktop: */
@@ -195,5 +199,9 @@ h1 {
 
     #date {
         width: 83%;
+    }
+
+    #studentName {
+        width: 250px;
     }
 }
