--- a/web-app/css/modal.css
+++ b/web-app/css/modal.css
@@ -87,7 +87,7 @@
 .modal-button {
     padding: 10px;
     border-radius: 8px;
-    font-size: medium;
+    font-size: large;
     margin-bottom: 10px;
 }
 #modal-late {
