--- a/web-app/css/style.css
+++ b/web-app/css/style.css
@@ -134,6 +134,7 @@ h1 {
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
+    font-size: large;
 }
 #seatPlan {
     width: 765px;
