--- a/web-app/css/style.css
+++ b/web-app/css/style.css
@@ -137,15 +137,16 @@ h1 {
     font-size: large;
 }
 #seatPlan {
-    width: 765px;
+    width: 800px;
     height: auto;
     border: solid #33b5e5;
     margin: 0;
-    /*position: relative;*/
 }
 #scroll_seatPlan {
-    float: left;
+    max-height: 553px;
+    text-align: center;
     overflow-x: scroll;
+    overflow-y: scroll;
 }
 
 /* For mobile phones: */
@@ -169,6 +170,10 @@ h1 {
 
     #seatPlan {
         width: 100%;
+    }
+
+    #scroll_seatPlan {
+        height: 10%;
     }
 
     .datepicker {
