--- a/web-app/css/style.css
+++ b/web-app/css/style.css
@@ -148,6 +148,11 @@ h1 {
     overflow-x: scroll;
     overflow-y: scroll;
 }
+.createCanvass {
+    background-color: #f14063;
+    color: white;
+}
+
 
 /* For mobile phones: */
 [class*="col-"] {
