--- a/web-app/css/style.css
+++ b/web-app/css/style.css
@@ -127,7 +127,6 @@ h1 {
  }
 #studentName {
     width: 250px;
-    height: 45px;
     padding: 12px 18px;
     margin: 8px 0;
     display: inline-block;
@@ -135,6 +134,16 @@ h1 {
     border-radius: 4px;
     box-sizing: border-box;
     font-size: large;
+}
+#selector {
+    width: 150px;
+    padding: 12px 18px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 3px solid #1c819a;
+    border-radius: 4px;
+    box-sizing: border-box;
+    font-size: larger;
 }
 #seatPlan {
     width: 800px;
