fixed small changes

--- a/web-app/css/style.css
+++ b/web-app/css/style.css
@@ -135,7 +135,7 @@ h1 {
     box-sizing: border-box;
     font-size: large;
 }
-#selector {
+#selector1 {
     width: 150px;
     padding: 12px 18px;
     margin: 8px 0;
